fix ag-grid theme and started upgrading apps with new theme modifs

--- a/git/formuladb-env/frmdb-apps/beauty-salon/index.html
+++ b/git/formuladb-env/frmdb-apps/beauty-salon/index.html
@@ -34,7 +34,7 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck frmdb-card-h-50">
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/beauty-salon/static/54e4d5464b51ad14f6da8c7dda79367f1c37dfe752506c4870277bd09e4cc158ba_640.jpg" alt="">
                 </div>
@@ -50,7 +50,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/beauty-salon/static/55e1d3424355a814f6da8c7dda79367f1c37dfe752506c4870277bd09e49c65ab0_1280.jpg" alt="" style="object-position: center">
                 </div>
@@ -65,7 +65,7 @@
                     <span>Nails</span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/beauty-salon/static/54e3d24b4d53b108f5d08460962936771d3edce4524c704c7d2f7fdd964cc65d_640.jpg" alt="" style="width: 100%" class="w-100">
                 </div>
@@ -81,7 +81,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden" style="grid-area: 1 / 1 / 1 / 1;">
                     <img src="/formuladb-env/frmdb-apps/beauty-salon/static/55e7dc404e53af14f6da8c7dda79367f1c37dfe752506c4870277bd09e4cc25ebf_640.jpg" alt="" class="w-100">
                 </div>
