--- a/git/formuladb-env/frmdb-apps/blog-add-on-app/index.html
+++ b/git/formuladb-env/frmdb-apps/blog-add-on-app/index.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="card-deck frmdb-cards-3">
-            <div class="card frmdb-t-card-media-main" data-frmdb-table-limit="10" data-frmdb-table="$FRMDB.$Page[]">
+            <div class="frmdb-t-card-media-main" data-frmdb-table-limit="10" data-frmdb-table="$FRMDB.$Page[]">
                 <div class="frmdb-t-img overflow-hidden frmdb-bg-dark-20">
                     <img src="/formuladb-env/frmdb-apps/blog-add-on-app/static/blog-post-1.png" alt="" data-frmdb-value="$FRMDB.$Page[].screenshot" class="opacity-0p3">
                 </div>
@@ -59,7 +59,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main" data-frmdb-table-limit="10" data-frmdb-table="$FRMDB.$Page[]">
+            <div class="frmdb-t-card-media-main" data-frmdb-table-limit="10" data-frmdb-table="$FRMDB.$Page[]">
                 <div class="frmdb-t-img overflow-hidden frmdb-bg-dark-20">
                     <img src="/formuladb-env/frmdb-apps/blog-add-on-app/static/blog-post-2.png" alt="" data-frmdb-value="$FRMDB.$Page[].screenshot" class="opacity-0p3">
                 </div>
@@ -76,7 +76,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main" data-frmdb-table-limit="10" data-frmdb-table="$FRMDB.$Page[]">
+            <div class="frmdb-t-card-media-main" data-frmdb-table-limit="10" data-frmdb-table="$FRMDB.$Page[]">
                 <div class="frmdb-t-img overflow-hidden frmdb-bg-dark-20">
                     <img src="/formuladb-env/frmdb-apps/blog-add-on-app/static/blog-post-3.png" alt="" data-frmdb-value="$FRMDB.$Page[].screenshot" class="opacity-0p3">
                 </div>
