--- a/git/formuladb-env/frmdb-apps/click-hostel/index.html
+++ b/git/formuladb-env/frmdb-apps/click-hostel/index.html
@@ -29,7 +29,7 @@
             <p data-i18n="en">Find the perfect place for you in the city. Experience an amazing urban retreat.</p>
         </div>
         <div class="card-deck">
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/click-hostel/static/52e1d6444a54b108f5d08460962936771d3edce4524c704c7d2e7ad49644cc5e_640.jpg" alt="">
                 </div>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="frmdb-t-card-note"></div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/click-hostel/static/57e8d6474950ab14f6da8c7dda79367f1c37dfe752506c4870277ad5974cc75fba_640.jpg" alt="">
                 </div>
@@ -62,7 +62,7 @@
                 </div>
                 <div class="frmdb-t-card-note"></div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/click-hostel/static/57e0d6424a55a514f6da8c7dda79367f1c37dfe752506c4870277ad5974cc75fba_640.jpg" alt="">
                 </div>
@@ -76,7 +76,7 @@
                 </div>
                 <div class="frmdb-t-card-note"></div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/click-hostel/static/54e5d24b4e56aa14f6da8c7dda79367f1c37dfe752506c4870277ad5974fc450bf_640.jpg" alt="">
                 </div>
@@ -98,7 +98,7 @@
             <p data-i18n="en">Here you can find some recommendations.</p>
         </div>
         <div class="card-deck">
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/click-hostel/static/52e1d2464e5aaa14f6da8c7dda79367f1c37dfe752506c4870277ad5974ec75bb1_640.jpg" alt="">
                 </div>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="frmdb-t-card-note"></div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/click-hostel/static/54e1d7444c50a914f6da8c7dda79367f1c37dfe752506c4870277ad5974ec55cba_640.jpg" alt="">
                 </div>
@@ -132,7 +132,7 @@
                 </div>
                 <div class="frmdb-t-card-note"></div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/click-hostel/static/54e7dc4a4e5bad14f6da8c7dda79367f1c37dfe752506c4870277ad5974ec459bf_640.jpg" alt="">
                 </div>
@@ -146,7 +146,7 @@
                 </div>
                 <div class="frmdb-t-card-note"></div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/click-hostel/static/50e9d5464c5bb108f5d08460962936771d3edce4524c704c7d2d7ad49f4ecd59_640.jpg" alt="">
                 </div>
