--- a/git/formuladb-env/frmdb-apps/dental-health/index.html
+++ b/git/formuladb-env/frmdb-apps/dental-health/index.html
@@ -25,7 +25,7 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/dental-health/static/54e0d44a4e50ac14f6da8c7dda79367f1c37dfe752506c4870277bd09648c651b0_640.jpg" alt="" style="height: 152.319px;" class="">
                 </div>
@@ -43,7 +43,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <img src="/formuladb-env/frmdb-apps/dental-health/static/57e6d64a4c5aaf14f6da8c7dda79367f1c37dfe752506c4870277bd09f4cc059b8_640.jpg" alt="">
                 <div class="frmdb-t-img overflow-hidden"></div>
                 <h5 data-i18n="en">special treatments</h5>
@@ -59,7 +59,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/dental-health/static/53e2d4464f53b108f5d08460962936771d3edce4524c704c7d2f7fdc964acd58_640.jpg" alt="">
                 </div>
@@ -76,7 +76,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/dental-health/static/52e7d7404d51ab14f6da8c7dda79367f1c37dfe752506c4870277bd09f4ccc5eb1_640.jpg" alt="">
                 </div>
@@ -99,7 +99,7 @@
     <section class="container py-5">
         <div class="text-center mb-5"></div>
         <div class="card-deck">
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/dental-health/static/57e8d3474350ad14f6da8c7dda79367f1c37dfe752506c4870277bd1974fc05aba_640.jpg" alt="" style="height: 152.319px;" class="">
                 </div>
@@ -117,7 +117,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <img src="/formuladb-env/frmdb-apps/dental-health/static/55e5d641435aad14f6da8c7dda79367f1c37dfe752506c4870277bd1974fc35db0_640.jpg" alt="">
                 <h5 data-i18n="en">dental technology</h5>
                 <div class="frmdb-t-img overflow-hidden"></div>
@@ -133,7 +133,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/dental-health/static/54e3d64a4b54a414f6da8c7dda79367f1c37dfe752506c4870277bd1974fc35db0_640.jpg" alt="">
                 </div>
@@ -150,7 +150,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/dental-health/static/55e6d3404957b108f5d08460962936771d3edce4524c704c7d2f7ed4964ac459_640.jpg" alt="" class="">
                 </div>
