--- a/git/formuladb-env/frmdb-apps/formuladb-university/landing-page.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-university/landing-page.html
@@ -28,7 +28,7 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/formuladb-university/static/card1.jpg" alt="">
                 </div>
@@ -46,7 +46,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/formuladb-university/static/card2.jpg" alt="">
                 </div>
@@ -64,7 +64,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/formuladb-university/static/card3.jpg" alt="">
                 </div>
@@ -82,7 +82,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/formuladb-university/static/card4.jpg" alt="">
                 </div>
