--- a/git/formuladb-env/frmdb-apps/hotel-booking/index.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/index.html
@@ -25,16 +25,18 @@
         <div class="frmdb-t-aside">
             <div data-frmdb-fragment="_form.html"></div>
         </div>
+        <div class="frmdb-t-section-divider"></div>
     </header>
-    <section class="container py-5">
+    <section class="frmdb-section-light container py-5">
+        <div class="frmdb-t-section-divider"></div>
         <div class="text-center mb-5">
             <h2 id="thememediacards">Hotel Accomodation</h2>
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
-        <div class="card-deck">
-            <div class="card frmdb-t-card-media-main">
-                <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg" alt="" class="">
+        <div class="frmdb-t-card-deck frmdb-cards-4">
+            <div class="frmdb-t-card-media-main">
+                <div class="frmdb-t-img overflow-hidden"
+                    style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg')">
                 </div>
                 <div class="card-body">
                     <h5>Card 1 title</h5>
@@ -50,7 +52,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room3.jpg" alt="" class="">
                 </div>
@@ -68,7 +70,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room1.jpg" alt="" class="">
                 </div>
@@ -86,7 +88,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg" alt="" class="">
                 </div>
