--- a/git/formuladb-env/frmdb-apps/kids-playground/index.html
+++ b/git/formuladb-env/frmdb-apps/kids-playground/index.html
@@ -38,7 +38,7 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/kids-playground/static/57e0dc414350ad14f6da8c7dda79367f1c37dfe752506c4870277ad49e4ac25ab9_1280.jpg" alt="">
                 </div>
@@ -56,7 +56,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/kids-playground/static/54e2d4464c52ad14f6da8c7dda79367f1c37dfe752506c4870277ad5924ac05bb1_640.jpg" alt="">
                 </div>
@@ -74,7 +74,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/kids-playground/static/57e4d3444850a414f6da8c7dda79367f1c37dfe752506c4870277ad49e45c750bb_640.jpg" alt="">
                 </div>
@@ -92,7 +92,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/kids-playground/static/52e8d5474f5bb108f5d08460962936771d3edce4524c704c7d2e7ad49745c558_1280.jpg" alt="" width="250">
                 </div>
