--- a/git/formuladb-env/frmdb-apps/personal-blog/index.html
+++ b/git/formuladb-env/frmdb-apps/personal-blog/index.html
@@ -41,7 +41,7 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <div class="card frmdb-t-card-media-main" style="display: grid;">
+            <div class="frmdb-t-card-media-main" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/base-app/static/card1.jpg" alt="" />
                 </div>
@@ -57,7 +57,7 @@
                     <span>INFO <small>info</small></span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/base-app/static/card2.jpg" alt="">
                 </div>
@@ -73,7 +73,7 @@
                     <span>INFO <small>info</small></span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/base-app/static/card3.jpg" alt="">
                 </div>
@@ -89,7 +89,7 @@
                     <span>INFO <small>info</small></span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/base-app/static/card4.jpg" alt="">
                 </div>
