--- a/git/formuladb-env/frmdb-apps/summer-villa/index.html
+++ b/git/formuladb-env/frmdb-apps/summer-villa/index.html
@@ -27,7 +27,7 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/summer-villa/static/52e3d2404a55a414f6da8c7dda79367f1c37dfe752506c4870277bdd964cc05cb1_640.jpg" alt="">
                 </div>
@@ -40,7 +40,7 @@
                 </div>
                 <div class="frmdb-t-card-note"></div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/summer-villa/static/52e4d4454f53a914f6da8c7dda79367f1c37dfe752506c4870277bdd964cc05cb1_640.jpg" alt="">
                 </div>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="frmdb-t-card-note"></div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/summer-villa/static/52e4dc4a4f50b108f5d08460962936771d3edce4524c704c7d2f72d49f49c350_640.jpg" alt="">
                 </div>
@@ -65,7 +65,7 @@
                     <a href="javascript:void(0)" class="" data-i18n="en">SEE THE MENU</a>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/summer-villa/static/5fe0d0464f55b108f5d08460962936771d3edce4524c704c7d2f72d49f48c451_640.jpg" alt="">
                 </div>
@@ -152,7 +152,7 @@
             <p data-i18n="en">Section lead paragraph, some text about the content described in this you section.</p>
         </div>
         <div class="card-deck">
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/summer-villa/static/55e3d3474c57b108f5d08460962936771d3edce4524c704c7d2f72d49f4dc651_640.jpg" alt="">
                 </div>
@@ -164,7 +164,7 @@
                     <a href="javascript:void(0)" class="" data-i18n="en">BOOK A TOUR</a>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/summer-villa/static/55e8d3474e54ae14f6da8c7dda79367f1c37dfe752506c4870277bdd9745c45bbf_640.jpg" alt="">
                 </div>
@@ -176,7 +176,7 @@
                     <a href="javascript:void(0)" class="" data-i18n="en">BOOK A TRIP</a>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/summer-villa/static/52e1dd464f54ae14f6da8c7dda79367f1c37dfe752506c4870277bdd964cc55fba_640.jpg" alt="">
                 </div>
@@ -188,7 +188,7 @@
                     <a href="javascript:void(0)" class="" data-i18n="en">BOOK A TOUR</a>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main border-0" style="display: grid;">
+            <div class="frmdb-t-card-media-main border-0" style="display: grid;">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/summer-villa/static/52e5d5464d57ae14f6da8c7dda79367f1c37dfe752506c4870277bdd9745c651b8_640.jpg" alt="">
                 </div>
