--- a/git/formuladb-env/frmdb-apps/blog-add-on-app/blog-post-3.html
+++ b/git/formuladb-env/frmdb-apps/blog-add-on-app/blog-post-3.html
@@ -31,7 +31,7 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/base-app/static/card1.jpg" alt="" class="">
                 </div>
@@ -49,7 +49,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/base-app/static/card2.jpg" alt="" class="">
                 </div>
@@ -67,7 +67,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/base-app/static/card3.jpg" alt="" class="">
                 </div>
@@ -85,7 +85,7 @@
                     </span>
                 </div>
             </div>
-            <div class="card frmdb-t-card-media-main">
+            <div class="frmdb-t-card-media-main">
                 <div class="frmdb-t-img overflow-hidden">
                     <img src="/formuladb-env/frmdb-apps/base-app/static/card4.jpg" alt="" class="">
                 </div>
