added generic favicon for any app, reusing the navbar brand icon

--- a/git/formuladb-env/frmdb-apps/formuladb-io/_head.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/_head.html
@@ -21,6 +21,6 @@
 <meta name="description" content="Build Applications Without Code">
 <meta name="author" content="FormulaDB">
 <title>FormulaDB - Build Applications Without Code</title>
-<link href="/formuladb-env/frmdb-apps/formuladb-io/static/favicon.png" rel="icon" type="image/png">
+<link rel="icon" href="./favicon.svg">
 <link id="frmdb-look-css" type="text/css" href="/formuladb-env/css/cerulean-7795f8-6c757d.css" rel="stylesheet">
 </head>
