--- a/git/formuladb-env/frmdb-apps/hotel-booking/_nav.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/_nav.html
@@ -1,7 +1,7 @@
 <div class="frmdb-t-main-nav" data-frmdb-fragment="_nav.html">
 <nav class="navbar">
     <a class="navbar-brand" href="index.html">
-        <frmdb-icon class="text-primary" name="fontawesome-solid-images-album-landscape-photo-picture"></frmdb-icon>
+        <frmdb-icon id="frmdb-nav-favicon" class="text-primary" name="crown-crown-hat-king-queen-royalty"></frmdb-icon>
         <strong style="font-weight: 900; display: inline-block">KING HOTEL</strong>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
