--- a/git/formuladb-env/frmdb-apps/hotel-booking/index.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/index.html
@@ -35,9 +35,7 @@
         </div>
         <div class="frmdb-t-card-deck frmdb-cards-4">
             <div class="frmdb-t-card-media-main">
-                <div class="frmdb-t-img overflow-hidden"
-                    style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg')">
-                </div>
+                <div class="frmdb-t-img overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg')"></div>
                 <div class="card-body">
                     <h5>Card 1 title</h5>
                     <h6>Card 1 subtitle</h6>
@@ -202,5 +200,8 @@
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
     <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
 </body>
+</html>
 </html>
