--- a/git/formuladb-env/frmdb-apps/base-app/_head.html
+++ b/git/formuladb-env/frmdb-apps/base-app/_head.html
@@ -1,9 +1,10 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="icon" href="/formuladb-env/frmdb-apps/formuladb-io/static/favicon.png" type="image/png">
+<link rel="icon" href="./favicon.svg">
 <title>Blog Post Example Page</title>
 <link rel="stylesheet" href="./formuladb-look.css">
+<link rel="icon" href="./favicon.svg">
 <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
 <meta name="author" content="alex">
 <meta name="description" content="Blog post example page to be used when adding new blog post pages">
