--- a/git/formuladb-env/frmdb-apps/base-app/_nav.html
+++ b/git/formuladb-env/frmdb-apps/base-app/_nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar" data-frmdb-fragment="_nav.html">
 <a class="navbar-brand" href="index.html">
-    <frmdb-icon name="fontawesome-solid-images-album-landscape-photo-picture"></frmdb-icon>
+    <frmdb-icon id="frmdb-nav-favicon" name="fontawesome-solid-images-album-landscape-photo-picture"></frmdb-icon>
     <span>BrandName</span>
 </a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
