--- a/git/formuladb-env/frmdb-apps/beauty-salon/_head.html
+++ b/git/formuladb-env/frmdb-apps/beauty-salon/_head.html
@@ -8,7 +8,7 @@
 	</script>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="icon" href="/formuladb-env/frmdb-apps/formuladb-io/static/favicon.png" type="image/png">
+<link rel="icon" href="./favicon.svg">
 <title>FormulaDB Themes</title>
 
 <link rel="stylesheet" id="frmdb-look-css" href="/formuladb-env/css/cosmo-cb8670-363636.css">
