--- a/git/formuladb-env/frmdb-apps/formuladb-io/about.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/about.html
@@ -24,7 +24,7 @@
     <meta name="description" content="Start your development with a Design System for Bootstrap 4.">
     <meta name="author" content="Creative Tim">
     <title>FormulaDB - Build Applications Without Code</title>
-    <link href="assets/favicon.png" rel="icon" type="image/png">
+    <link rel="icon" href="./favicon.svg">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link href="assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
 
