--- a/git/formuladb-env/frmdb-apps/health-guardians/_head.html
+++ b/git/formuladb-env/frmdb-apps/health-guardians/_head.html
@@ -8,7 +8,7 @@
 	</script>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="icon" href="/formuladb-env/frmdb-apps/formuladb-io/static/favicon.png" type="image/png">
+<link rel="icon" href="./favicon.svg">
 <title>FormulaDB Themes</title>
 
 <link rel="stylesheet" id="frmdb-theme-css" href="/formuladb-env/css/lux-5e72e4-f4f5f7.css">
