--- a/git/formuladb-env/frmdb-apps/hotel-booking/_footer.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/_footer.html
@@ -1,4 +1,4 @@
-<footer class="frmdb-section-dark bg-dark" data-frmdb-fragment="_footer.html">
+<footer class="" data-frmdb-fragment="_footer.html">
 <div class="container">
     <div class="row">
         <div class="col-lg-3  col-md-6 col-sm-6">
