work on upgrading html for all apps

--- a/git/formuladb-env/frmdb-apps/beauty-salon/index.html
+++ b/git/formuladb-env/frmdb-apps/beauty-salon/index.html
@@ -131,19 +131,19 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-3 frmdb-card-h-50">
-                <div class="card frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
+                <div class="frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-mobile-alt-apple-call-cell_phone-cellphone-device-iphone-number-screen-telephone" class="text-primary m-2"></frmdb-icon>&nbsp;Call us 07XX XXX XXX
                     </h4>
                     <p data-i18n="en"></p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
+                <div class="frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <h4 data-i18n="en" contenteditable="true" spellcheckker="false">
                         <frmdb-icon name="fontawesome-solid-map-marker-alt-address-coordinates-destination-gps-localize-location-map-navigation-paper-pin-place-point_of_interest-position-route-travel" class="text-primary m-2"></frmdb-icon>&nbsp; &nbsp; Visit us
                     </h4>
                     <p data-i18n="en">Maecenas tempor erat eget ornare vulputate.&nbsp;</p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
+                <div class="frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-clock-date-late-schedule-time-timer-timestamp-watch" class="text-primary m-2"></frmdb-icon>&nbsp;We're here 9AM - 9PM
                     </h4>
