--- a/git/formuladb-env/frmdb-apps/design-therapy/index.html
+++ b/git/formuladb-env/frmdb-apps/design-therapy/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-3 frmdb-card-h-50">
-                <div class="card frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
+                <div class="frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <frmdb-icon name="fontawesome-solid-id-card-alt-contact-demographics-document-identification-issued-profile" class="text-primary sz-4"></frmdb-icon>
                     <h4 data-i18n="en"> short survey
                     </h4>
@@ -111,13 +111,13 @@
                     <div>It will be fun, we promise!</div>
                     <p></p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
+                <div class="frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <frmdb-icon name="fontawesome-solid-handshake-agreement-greeting-meeting-partnership" class="text-primary sz-4"></frmdb-icon>
                     <h4 data-i18n="en">&nbsp;designer match</h4>
                     <p data-i18n="en">This is the second step where you will meet the perfect designer for you. He will present mood boards concept.</p>
                     <p></p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
+                <div class="frmdb-t-card-icon-main border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <frmdb-icon name="fontawesome-solid-couch-chair-cushion-furniture-relax-sofa" class="text-primary sz-4"></frmdb-icon>
                     <h4 data-i18n="en"> shop &amp; order
                     </h4>
@@ -126,7 +126,7 @@
                     <div data-i18n="en">This time you will have the final design and instructions for your project. So now it's time for shopping. The designer will show you a list of furniture, decorations, accessories from different shops. You choose, he orders for you</div>
                     <p></p>
                 </div>
-                <div class="card frmdb-t-card-icon-main center border border-2 border-primary p-3 frmdb-bg-dark-70">
+                <div class="frmdb-t-card-icon-main center border border-2 border-primary p-3 frmdb-bg-dark-70">
                     <frmdb-icon name="fontawesome-solid-home-abode-building-house-main" class="text-primary sz-4"></frmdb-icon>
                     <h4 data-i18n="en"> enjoy your rooms</h4>
                     <p data-i18n="en">This is the last step where you will enjoy your rooms you've always wanted.</p>
