--- a/git/formuladb-env/frmdb-apps/apollo-medical-center/index.html
+++ b/git/formuladb-env/frmdb-apps/apollo-medical-center/index.html
@@ -44,39 +44,39 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-3">
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-user-md-job-medical-nurse-occupation-physician-profile-surgeon"></frmdb-icon> Doctors
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-notes-medical-clipboard-doctor-ehr-health-history-records"></frmdb-icon> Patient records
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-hospital-alt-building-emergency_room-medical_center"></frmdb-icon>&nbsp;hospital equipment
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-procedures-EKG-bed-electrocardiogram-health-hospital-life-patient-vital"></frmdb-icon> medical procedures
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-x-ray-health-medical-radiological_images-radiology-skeleton"></frmdb-icon> x-rays
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-ambulance-emergency-emt-er-help-hospital-support-vehicle"></frmdb-icon> emergency
                     </h4>
