--- a/git/formuladb-env/frmdb-apps/click-hostel/index.html
+++ b/git/formuladb-env/frmdb-apps/click-hostel/index.html
@@ -169,39 +169,39 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-3">
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant"></frmdb-icon> breakfast
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-biking-bicycle-bike-cycle-cycling-ride-wheel"></frmdb-icon>&nbsp;rent bikes
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-mug-hot-caliente-cocoa-coffee-cup-drink-holiday-hot_chocolate-steam-tea-warmth"></frmdb-icon>&nbsp;bistro cafe
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-wifi-connection-hotspot-internet-network-wireless"></frmdb-icon> free wifi
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-gamepad-arcade-controller-d-pad-joystick-video-video_game"></frmdb-icon> gaming room
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-money-check-alt-bank_check-buy-checkout-cheque-money-payment-price-purchase"></frmdb-icon> budget option
                     </h4>
