--- a/git/formuladb-env/frmdb-apps/dental-health/index.html
+++ b/git/formuladb-env/frmdb-apps/dental-health/index.html
@@ -177,33 +177,33 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-3">
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h5 data-i18n="en">dental implant</h5>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h5 data-i18n="en">
                          dental aesthetics</h5>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h5 data-i18n="en">
                          dental x-ray</h5>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h5 data-i18n="en">
                          surgery</h5>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h5 data-i18n="en">
                          orthodontic treatment</h5>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
                 </div>
-                <div class="card frmdb-t-card-icon-main border-light p-4 bg-transparent">
+                <div class="frmdb-t-card-icon-main border-light p-4 bg-transparent">
                     <h5 data-i18n="en">
                          paradontology</h5>
                     <p>Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula. Nulla lacinia vel erat in
